[package]
name = "probe-sniffer"
version = "0.2.0"
edition = "2021"
description = "Cross-platform WiFi probe request sniffer with signal-strength-based device clustering and multi-card triangulation"

[dependencies]
pcap = "2.2"
clap = { version = "4", features = ["derive"] }
chrono = "0.4"
log = "0.4"
env_logger = "0.11"
colored = "2"
ctrlc = "3.4"

[target.'cfg(target_os = "windows")'.dependencies]
windows = { version = "0.58", features = [
    "Win32_NetworkManagement_WiFi",
    "Win32_Foundation",
] }
